<resources>
    <string name="app_name">Pendaftaran Online Pasien</string>
    <string name="title_activity_login">Sign in</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Login Activity -->
    <string name="hint_Email">Email</string>
    <string name="hint_Password">Password</string>
    <string name="str_btn_login">Login</string>
    <string name="str_btn_signup">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Pendaftaran Kontrol -->
    <string name="tvTanggalKontrol">Tanggal Kontrol</string>
    <string name="tvPenjamin">Penjamin</string>
    <string name="tvPoli">Poli</string>
    <string name="tvJam">Pukul</string>

    <string name="penjamin_prompt">Pilih penjamin</string>
    <string name="poli_prompt">Pilih poli</string>
    <string name="filter_table_list_pasien">No. RM/Nama/NIK</string>
    <string name="tv_filter_table_list_pasien">Filter Pasien</string>
    <string name="tv_norm_list_berobat_pasien">No. RM:</string>
    <string name="tv_nama_list_berobat_pasien">Nama Pasien:</string>
    <string name="tv_reservasi_hasil_reservasi">No. Reservasi</string>
    <string name="tv_penjamin_hasil_reservasi">Penjamin</string>

    <string-array name="poli_arrays">
        <item>Poli Gigi</item>
        <item>Poli Umum</item>
        <item>Poli KIA</item>
    </string-array>

    <string-array name="penjamin_arrays">
        <item>BPJS</item>
        <item>Umum</item>
    </string-array>
</resources>
