<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="#407F47">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="56dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <!-- Email Label -->
    <android.support.design.widget.TextInputLayout
        style="@style/TextEdit.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/hint_Email">
        <EditText
            android:textAppearance="@style/TextEdit.Text"
            android:textColor="@null"
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <!-- Password Label -->
    <android.support.design.widget.TextInputLayout
        style="@style/TextEdit.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:passwordToggleEnabled="true"
        android:hint="@string/hint_Password">
        <EditText
            android:textAppearance="@style/TextEdit.Text"
            android:textColor="@null"
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <!-- Signup Button -->
    <android.support.design.button.MaterialButton
        style="@style/Widget.Apps.Button"
        android:id="@+id/btn_signup"
        android:textSize="15sp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/str_btn_signup"/>

    <TextView android:id="@+id/link_login"
        android:textColor="@color/textColorPrimaryLight"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="Already a member? Login"
        android:gravity="center"
        android:textSize="16dip"/>

</LinearLayout>
</ScrollView>