<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DaftarKontrolFragmen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:paddingVertical="10dp"
                android:paddingLeft="10dp"
                android:text="@string/tvTanggalKontrol"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_tanggalKontrol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/open_sans"
                android:paddingVertical="10dp"
                android:text="Pilih Tanggal"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:paddingVertical="10dp"
                android:paddingLeft="10dp"
                android:text="@string/tvPenjamin"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/rg_penjamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/open_sans"
                android:paddingVertical="10dp"
                android:textSize="18dp">

                <RadioButton
                    android:id="@+id/rb_bpjs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="BPJS" />

                <RadioButton
                    android:id="@+id/rb_umum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UMUM" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:paddingVertical="10dp"
                android:paddingLeft="10dp"
                android:text="@string/tvPoli"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_poli"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/open_sans"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:paddingVertical="10dp"
                android:paddingLeft="10dp"
                android:text="@string/tvDokter"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_dokter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/open_sans"
                android:textSize="18dp"></Spinner>

            <Button
                android:id="@+id/btn_Daftar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:padding="20dp"
                android:text="Daftar"
                android:textSize="20dp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>